--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "tailwindcss": "^3.3.5"
   }
 }
